# PaperMate

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  analysis.py  auth.py  chat.py  papers.py  projects.py  settings.py  terms.py  translation.py
backend/app/core/: __init__.py  config.py  database.py  encryption.py  middleware.py  rate_limit.py  security.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  analysis_service.py  chat_service.py  deep_analysis_service.py  openai_settings.py  paper_parser.py  react_agent.py  storage.py  term_analyze_service.py  term_service.py  tools.py  translation_service.py
backend/app/utils/: text_signals.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  ComparisonView.tsx  CountdownConfirmation.tsx  Header.tsx  MarkdownMessage.tsx  MemoryPanel.tsx  PaperList.tsx  PaperReader.tsx  ProfileUpdateBar.tsx  SettingsModal.tsx  TermTooltip.tsx  ToolCallIndicator.tsx  UserProfilePanel.tsx
frontend/src/components/shared/: AuthImage.tsx  (+1 more)
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  PaperPage.tsx
frontend/src/stores/: authStore.ts  chatStore.ts  paperStore.ts  projectStore.ts  termStore.ts  uiStore.ts  userProfileStore.ts
scripts/: dev.sh
(+3 files in other folders)
